# promptforge

./: .gitignore  README.md  README_updated.md  prompt-forge.html  promptforge_bridge.py
PromptForge/: README.md  __init__.py  api.py  llm_client.py  nodes.py  prompt_engine.py  pyproject.toml  requirements.txt  storage.py
PromptForge/tests/: panel_harness.html  run_tests.js  test_backend.py  test_composer.py
PromptForge/web/js/: promptforge_compiler.js  promptforge_panel.js  promptforge_profiles.js  promptforge_state.js  promptforge_ui.css
prompt-bridge-forge/: __init__.py
prompt-bridge-forge/js/: promptforge_linter.js  promptforge_live.js  promptforge_panel.js  promptforge_profiles.js  promptforge_ui.css
tests/: panel_harness.html  run_tests.js  test_composer.py
