[project]
name = "promptforge"
description = "Prompt Forge — scene-based prompt composer for ComfyUI: model profiles, linter, LLM enhance/draft, all inside one custom node package."
version = "2.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://example.invalid/promptforge"

[tool.comfy]
PublisherId = ""
DisplayName = "Prompt Forge"
Icon = ""
